Fix code blocks overflow

--- a/static/style.css
+++ b/static/style.css
@@ -196,7 +196,9 @@ code {
 }
 
 pre {
+	overflow: auto;
 	padding: 0.25em 0.5em;
+	text-overflow: ellipsis;
 }
 
 code {
